--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^5.4",
+        "php": ">=5.4.0",
         "yiisoft/yii2": "2.0.15.1"
     }
 }
